# MetaView-Loader-Custom

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  Doxyfile  README.md  build_all.ps1  format-project.cmd  generateEnum.py
.reuse/: dep5
CommonHeaders/: CommonTypes.h
CommonHeaders/ProviderInterface/: IUnityGraphicsD3D11.h  IUnityXRDisplay.h  IUnityXRInput.h  IUnityXRMeshing.h  IUnityXRPreInit.h  IUnityXRStats.h  IUnityXRTrace.h  UnitySubsystemTypes.h  UnityXRDisplayStats.h  UnityXRTypes.h
Model/: DirectDisplayManager.cpp  DirectDisplayManager.h  DisplayDetection.cpp  DisplayDetection.h  GetOutputDevice.cpp  GetOutputDevice.h  InitErrors.h  Log.h  Logging.cpp  Logging.h  ModeComparison.cpp  ModeComparison.h  ModeSelection.cpp  ModeSelection.h  RenderParam.cpp  RenderParam.h  Renderer.cpp  Renderer.h
Providers/: Metadata.h  OpenVRProviderContext.h  OpenVRSystem.cpp  OpenVRSystem.h  Shared.h  UserProjectSettings.cpp  UserProjectSettings.h  Util.h  dllmain.cpp
Providers/Display/: Display.cpp  Display.h
Providers/Input/: Input.cpp  Input.h
com.metavision.unity/: CHANGELOG.md  LICENSE.md  README.md  package.json
com.metavision.unity/Editor/: LoaderMetadata.cs  Unity.XR.MetaView.Editor.asmdef  XRBuildProcessor.cs  XRSettingsCopier.cs  XRSettingsEditor.cs
com.metavision.unity/Runtime/: ConfigureXrProjection.cs  DeviceLayouts.cs  InitErrors.cs  MetaViewLoader.cs  PluginMetadata.cs  Settings.cs  Unity.XR.MetaView.asmdef  Unity.XR.MetaView.asmdef.license  UnitySubsystemsManifest.json  XrCameraFixHack.cs
samples/: GameRenderer.cpp  GameRenderer.h  GetTopology.cpp  RenderSample.cpp  Sample.cpp  SampleGUI.cpp  SampleGUI.rc  StepTimer.h  resource.h  targetver.h
